--- a/chrome.html
+++ b/chrome.html
@@ -18,10 +18,15 @@
         <input type ="submit" value ="logIn"/>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <h2 id="clock"></h2>
+    <h2 id="clock">00:00:00</h2>
     <h2 id="today"></h2>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 </html>
