--- a/chrome.html
+++ b/chrome.html
@@ -20,6 +20,17 @@
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
     <h2 id="today"></h2>
+    <form id ="todo-form">
+        <input 
+            type="text" 
+            placeholder="Write a To Do and Press Enter." 
+            required
+        />
+    </form>
+    <ul id="todo-list">
+        
+    </ul>
+
     <div id="quote">
         <span></span>
         <span></span>
@@ -28,5 +39,7 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <Script src="js/weather.js"></Script>
 </body>
 </html>
