--- a/chrome.html
+++ b/chrome.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Chrome app</title>
-</head>
-<body>
-    <h5 id="today"></h5>
-    <h5 id="clock"></h5>
-    <div id="weather">
+  </head>
+  <body>
+    <header>
+      <div id="weather">
         <div></div>
         <div></div>
-    </div>
+      </div>
 
-    <main>
+      <div id="login">
         <form id="login-form" class="hidden">
-            <input 
-                required
-                maxlength="15"
-                type="text"
-                placeholder="What is your name?"
-            />
-            <input type ="submit" value ="logIn"/>
+          <input
+            required
+            maxlength="15"
+            type="text"
+            placeholder="What is your name?"
+          />
+          <input type="submit" value="logIn" />
         </form>
         <h1 id="greeting" class="hidden"></h1>
+      </div>
+    </header>
 
-        <form id ="todo-form">
-            <div>ToDo-List</div>
-            <input 
-                type="text" 
-                placeholder="Write a To Do and Press Enter." 
-                required
-            />
+    <main>
+      <div id="left-box">
+        <h5 id="today"></h5>
+        <h5 id="clock"></h5>
+      </div>
+
+      <div>
+        <form id="todo-form">
+          <div>✍ ToDo-List ✍</div>
+          <input
+            type="text"
+            placeholder="Write a To Do and Press Enter."
+            required
+          />
         </form>
         <div id="todo-box">
-            <ul id="todo-list">
-            </ul>
+          <ul id="todo-list"></ul>
         </div>
-        <div id="quote">
-            <div></div>
-            <div></div>
-        </div>
-
+      </div>
     </main>
 
-    
-    
+    <div id="quote">
+      <div></div>
+      <div></div>
+    </div>
 
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
-    <Script src="js/weather.js"></Script>
-</body>
+    <script src="js/weather.js"></script>
+  </body>
 </html>
